# i3blocks

./: .gitignore  .nvim.lua  CMakeLists.txt  Makefile.am  autogen.sh  configure.ac
inc/: bar.h  block.h  log.h  sys.h
src/: bar.c  block.c  config.c  i3bar.c  ini.c  json.c  line.c  main.c  map.c  sys.c
